Update Div and Span file

--- a/day-02-html-intermediate/4_divSpan.html
+++ b/day-02-html-intermediate/4_divSpan.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <div> — Division / Block-level Container
+    It groups block-level content.
+    By default, <div> takes full width and starts on a new line.
+    Commonly used for sections, layout containers, and styling blocks. -->
+    <div style="background-color: cadetblue;padding: 10px;">
+        <h2>Div</h2>
+        <p>This is a para inside div.</p>
+    </div>
+
+
+    <!-- <span> — Inline Container
+    Purpose: Groups inline content (like words, letters, small text).
+    By default, <span> does not start a new line.
+    Mainly used for styling a part of text or adding a class/ID. -->
+    <p>Sale end in <span style="color:brown;"> 3 days</span>!</p>
+
+
+    <!-- Combined example of div and span -->
+    <div style="background-color: rgb(180, 180, 220); padding: 10px;">
+        <p>Hello My name is <span style="color: red;">Eshah</span>.</p>
+        <p>Welcome to my Website!</p>
+    </div>
 </body>
 </html>
