Add content  to file

--- a/day-01-html-basics/profile_page.html
+++ b/day-01-html-basics/profile_page.html
@@ -1,3 +1,8 @@
+<!-- Practice:
+Make a simple personal profile page:
+Name (h1), short bio (p), hobbies (ul/ol), profile picture
+Add a link to your favorite website -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +11,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Eshah Shahzadi</h1>
+    <img src="eshu.jpg" alt="My picture" class="profile-pic">
+    <p>I am a computer science student. I am keen in learning web engineering. I have made a lot of projects on web.</p>
+    <ul> <u>My hobbies</u>
+        <li>Learning web development</li>
+        <li>Making projects</li>
+        <li>Making green squares on github</li>
+        <li>Solving leetcode problems</li>
+        <li>Sleeping</li>
+    </ul>
     
 </body>
 </html>
