--- a/day-01-html-basics/profile_page.html
+++ b/day-01-html-basics/profile_page.html
@@ -20,7 +20,8 @@ Add a link to your favorite website -->
         <li>Making green squares on github</li>
         <li>Solving leetcode problems</li>
         <li>Sleeping</li>
-    </ul>
+    </ul>My Favourite website</p>
+    <a href="https://www.github.com">Open github</a>
     
 </body>
 </html>
