--- a/day-03-html5-features/4_project.html
+++ b/day-03-html5-features/4_project.html
@@ -1,3 +1,12 @@
+<!-- Build a complete mini website combining:
+Header + Navigation
+About/Content Section
+Images
+Tables
+Forms
+Footer
+Add Comments -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
