--- a/day-03-html5-features/3_embed.html
+++ b/day-03-html5-features/3_embed.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Used for:
+    Embedding another website
+    Google Maps
+    YouTube video
+    Another HTML file -->
+
+    <h3>Embedding another website:</h3>
+    <iframe src="https://www.wikipedia.org" height="200" width="300"></iframe>
+
+    <h3>Embed Google Maps:</h3>
+    <iframe src="https://www.google.com/maps?q=Lahore,+Pakistan&output=embed"></iframe>
+
+    <h3>Embed youtube video:</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bN6DE-4uFNo?si=mhlYijWjyvsr5f3v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <h3>Embed another HTML page using iframe: </h3>
+    <iframe src="2_inputTypes.html" frameborder="100" width="200" height="200"></iframe>
     
+
 </body>
 </html>
