--- a/day-03-html5-features/4_project.html
+++ b/day-03-html5-features/4_project.html
@@ -39,8 +39,8 @@ Add Comments -->
     <!-- Images Section -->
     <section id="gallery">
         <h2>Images</h2>
-        <img src="image1.jpg" alt="Sample Image" width="200">
-        <img src="image2.jpg" alt="Sample Image" width="200">
+        <img src="web.avif" alt="Sample Image" width="200">
+        <!-- <img src="image2.jpg" alt="Sample Image" width="200"> -->
     </section>
 
     <!-- Table Section -->
