Update content of file

--- a/day-03-html5-features/4_project.html
+++ b/day-03-html5-features/4_project.html
@@ -40,7 +40,7 @@ Add Comments -->
     <section id="gallery">
         <h2>Images</h2>
         <img src="web.avif" alt="Sample Image" width="200">
-        <!-- <img src="image2.jpg" alt="Sample Image" width="200"> -->
+        <img src="pic.png" alt="Sample Image" width="200">
     </section>
 
     <!-- Table Section -->
