--- a/Project/index.html
+++ b/Project/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="navbar"></div>
+    </header>
 </body>
 </html>
