--- a/Project/index.html
+++ b/Project/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="navbar"></div>
+        <div class="navbar">
+            
+        </div>
     </header>
 </body>
 </html>
