--- a/Project/index.html
+++ b/Project/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <div class="navbar">
-            
+    <div class="navbar">
+
+        <div class="nav-logo border">
+            <div class="logo"></div>
         </div>
-    </header>
+
+        <div class="nav-address border">
+            <p id="add-first">Deliver to</p>
+            <div class="add-icon">
+                <i class="fa-regular fa-location-dot"></i>
+                <p id="add-sec">Pakistan</p>
+            </div>
+        </div>
+
+        <div class="nav-search border">
+            <select>
+                <option >All</option>
+            </select>
+            <input placeholder="Searxh amazon">
+            <div class="search-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+    </div>
+</header>
+
 </body>
+
 </html>
