--- a/Project/index.html
+++ b/Project/index.html
@@ -13,31 +13,31 @@
 
 <body>
     <header>
-    <div class="navbar">
+        <div class="navbar">
 
-        <div class="nav-logo border">
-            <div class="logo"></div>
-        </div>
+            <div class="nav-logo border">
+                <div class="logo"></div>
+            </div>
 
-        <div class="nav-address border">
-            <p id="add-first">Deliver to</p>
-            <div class="add-icon">
-                <i class="fa-regular fa-location-dot"></i>
-                <p id="add-sec">Pakistan</p>
+            <div class="nav-address border">
+                <p id="add-first">Deliver to</p>
+                <div class="add-icon">
+                    <i class="fa-regular fa-location-dot"></i>
+                    <p id="add-sec">Pakistan</p>
+                </div>
+            </div>
+
+            <div class="nav-search border">
+                <select class="search-select">
+                    <option>All</option>
+                </select>
+                <input placeholder="Searxh amazon" class ="search-input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
             </div>
         </div>
-
-        <div class="nav-search border">
-            <select>
-                <option >All</option>
-            </select>
-            <input placeholder="Searxh amazon">
-            <div class="search-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
-        </div>
-    </div>
-</header>
+    </header>
 
 </body>
 
