--- a/Project/index.html
+++ b/Project/index.html
@@ -46,6 +46,11 @@
                 <p><span>Returns</span></p>
                 <p class="nav-2nd">& Orders</p>
             </div>
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                Cart
+            </div>
         </div>
     </header>
 
