--- a/Project/index.html
+++ b/Project/index.html
@@ -31,7 +31,7 @@
                 <select class="search-select">
                     <option>All</option>
                 </select>
-                <input placeholder="Searxh amazon" class ="search-input">
+                <input placeholder="Searxh amazon" class="search-input">
                 <div class="search-icon">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
@@ -50,6 +50,25 @@
             <div class="nav-cart border">
                 <i class="fa-solid fa-cart-arrow-down"></i>
                 Cart
+            </div>
+        </div>
+
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-list"></i>
+                All
+            </div>
+
+            <div class="panel-ops">
+                <p>Today's Deal</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+
+            <div class="panel-deals">
+                Shop deals in Electronics
             </div>
         </div>
     </header>
