--- a/Project/index.html
+++ b/Project/index.html
@@ -73,6 +73,12 @@
         </div>
     </header>
 
+    <div class="hero-section">
+        <div class="hero-msg">
+            <p>You are on amazon.com. you can also shop on Amazon India for millions of prducts with fast delivery. <a href="Click here to go to amazon.in"></a></p>
+        </div>
+    </div>
+
 </body>
 
 </html>
