--- a/Project/index.html
+++ b/Project/index.html
@@ -75,15 +75,18 @@
 
     <div class="hero-section">
         <div class="hero-msg">
-            <p>You are on amazon.com. you can also shop on Amazon India for millions of prducts with fast delivery. <a href="Click here to go to amazon.in"></a></p>
+            <p>You are on amazon.com. you can also shop on Amazon India for millions of prducts with fast delivery. <a
+                    href="Click here to go to amazon.in"></a></p>
         </div>
     </div>
 
     <div class="shop-section">
         <div class="box1 box">
-            <h2>Health & Personal Care</h2>
-            <div class="box-img "style="back-ground image: url('box1_image.jpg')"></div>
-            <p>See more</p>
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url('box1_image.jpg')"></div>
+                <p>See more</p>
+            </div>
         </div>
         <div class="box2 box">box2</div>
         <div class="box3 box">box3</div>
