--- a/Project/index.html
+++ b/Project/index.html
@@ -88,9 +88,27 @@
                 <p>See more</p>
             </div>
         </div>
-        <div class="box2 box">box2</div>
-        <div class="box3 box">box3</div>
-        <div class="box4 box">box4</div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url('box2_image.jpg')"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url('box3_image.jpg')"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url('box4_image.jpg')"></div>
+                <p>See more</p>
+            </div>
+        </div>
     </div>
 
 </body>
