--- a/Project/index.html
+++ b/Project/index.html
@@ -140,6 +140,12 @@
         </div>
     </div>
 
+    <footer>
+        <div class="foot-panel1">
+            Back to Top
+        </div>
+    </footer>
+
 </body>
 
 </html>
