--- a/Project/index.html
+++ b/Project/index.html
@@ -144,6 +144,8 @@
         <div class="foot-panel1">
             Back to Top
         </div>
+
+        <div class="foot-panel2"></div>
     </footer>
 
 </body>
