--- a/Project/index.html
+++ b/Project/index.html
@@ -145,8 +145,11 @@
             Back to Top
         </div>
 
-        <div class="foot-panel2"></div>
-        <p>Get to know</p>
+        <div class="foot-panel2">
+            <p>Get to know</p>
+            <a>Careers</a>
+        </div>
+        
     </footer>
 
 </body>
