--- a/Project/index.html
+++ b/Project/index.html
@@ -148,6 +148,9 @@
         <div class="foot-panel2">
             <p>Get to know</p>
             <a>Careers</a>
+            <a>Blog</a>
+            <a>About Amazon</a>
+            
         </div>
         
     </footer>
