--- a/Project/index.html
+++ b/Project/index.html
@@ -149,8 +149,7 @@
             <p>Get to know</p>
             <a>Careers</a>
             <a>Blog</a>
-            <a>About Amazon</a>
-            
+            <a>Investor Relation</a>
         </div>
         
     </footer>
