--- a/Project/index.html
+++ b/Project/index.html
@@ -150,6 +150,8 @@
             <a>Careers</a>
             <a>Blog</a>
             <a>Investor Relation</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
         </div>
         
     </footer>
