--- a/Project/index.html
+++ b/Project/index.html
@@ -154,6 +154,15 @@
             <a>Amazon Devices</a>
             <a>Amazon Science</a>
             </ul>
+
+            <ul>
+            <p>Get to know</p>
+            <a>Careers</a>
+            <a>Blog</a>
+            <a>Investor Relation</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
+            </ul>
         </div>
         
     </footer>
