--- a/Project/index.html
+++ b/Project/index.html
@@ -183,6 +183,9 @@
             </ul>
         </div>
         
+        <div class="foot-panel3">
+            <div class="logo"></div>
+        </div>
     </footer>
 
 </body>
