--- a/Project/index.html
+++ b/Project/index.html
@@ -186,6 +186,8 @@
         <div class="foot-panel3">
             <div class="logo"></div>
         </div>
+
+        <div class="foot-panel4"></div>
     </footer>
 
 </body>
