--- a/Project/index.html
+++ b/Project/index.html
@@ -187,7 +187,13 @@
             <div class="logo"></div>
         </div>
 
-        <div class="foot-panel4"></div>
+        <div class="foot-panel4">
+            <div class="pages">
+                <a>Conditions of Use</a>
+                <a>Privacy Notice</a>
+                <a>Yous add privacy choices</a>
+            </div>
+        </div>
     </footer>
 
 </body>
