--- a/Project/index.html
+++ b/Project/index.html
@@ -194,6 +194,10 @@
                 <a>Yous add privacy choices</a>
             </div>
         </div>
+
+        <div class="copyright">
+            <p>&copy; 1996-2023, Amazon.com, Inc. or its affiliates</p>
+        </div>
     </footer>
 
 </body>
