--- a/Project/index.html
+++ b/Project/index.html
@@ -75,8 +75,14 @@
 
     <div class="hero-section">
         <div class="hero-msg">
-            <p>You are on amazon.com. you can also shop on Amazon India for millions of prducts with fast delivery. <a
-                    href="Click here to go to amazon.in"></a></p>
+            <div class="hero-msg">
+                <p>
+                    You are on amazon.com. you can also shop on Amazon India for millions of products with fast
+                    delivery.
+                    <a href="https://www.amazon.in">Click here to go to amazon.in</a>
+                </p>
+            </div>
+
         </div>
     </div>
 
